# lumina-translate

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json  vite.config.ts
design/liquid_lumina/: DESIGN.md
design/lumina_dictionary_workspace/: code.html
design/lumina_document_translation_workspace/: code.html
design/lumina_documents_workspace/: code.html
design/lumina_enhanced_proofread_wide_layout/: code.html
design/lumina_home_workspace/: code.html
design/lumina_settings_workspace/: code.html
docs/plans/: 2026-03-21-small-improvements.md
electron/: main.ts  preload.ts
src/: App.tsx  index.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/components/dictionary/: DictionaryWorkspace.tsx
src/components/documents/: DocumentsWorkspace.tsx
src/components/layout/: Sidebar.tsx  TopBar.tsx
src/components/proofread/: ProofreadWorkspace.tsx
src/components/settings/: SettingsWorkspace.tsx
src/components/shared/: PretextRenderer.tsx
src/components/translate/: TranslateWorkspace.tsx  TranslationOutput.tsx  alignParagraphs.ts
src/components/ui/: ErrorBoundary.tsx
src/hooks/: useSettings.ts  useTranslation.ts
src/i18n/: ar.ts  cs.ts  de.ts  el.ts  en.ts  es.ts  fr.ts  hi.ts  hu.ts  id.ts  index.ts  it.ts  ja.ts  ko.ts  nl.ts  pl.ts  pt.ts  ro.ts  ru.ts  sv.ts  th.ts  tr.ts  uk.ts  vi.ts  zh.ts
src/services/: ai.ts  pdf.ts  settings.ts  themes.ts
src/utils/: textFormat.ts
