[package]
name = "lumina-translate"
version = "1.0.0"
description = "AI-powered desktop translation app"
authors = ["you"]
license = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.10.3", features = [] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
